feat: create patch apis of client and category
